welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:2: error: identifier expected but integer literal found.
var nbMarche:Int ==0 
                   ^